--- a/style/main.css
+++ b/style/main.css
@@ -44,6 +44,7 @@ a:link {
   width: 10px;
   height: 100%;
   background: rgb(255, 255, 255, 0.05);
+  z-index: 9999;
 }
 
 #progressbar {
@@ -53,6 +54,7 @@ a:link {
   width: 10px;
   background: linear-gradient(var(--dsecondary), var(--secondary));
   animation: animate 5s linear infinite;
+  z-index: 10000;
 }
 
 @keyframes animate {
